Port Asterion to 1.20.1 and 1.21.1 with Stonecutter and Amnetic